# kairix

./: .gitignore  CLAUDE.md  Justfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  self_reflective_json_summarizer.md  test-convos.json
cognition_engine/: .gitignore  CLAUDE.md  justfile  main.py  pyproject.toml
cognition_engine/examples/: __init__.py  demo.py  executors.py  perceptors.py  proposers.py  schedulers.py
cognition_engine/src/: __init__.py  executor.py  perceptor.py  persona.py  proposer.py  scheduler.py  types.py
cognition_engine/src/cognition_engine/: __init__.py  perceptor.py  persona.py  scheduler.py
cognition_engine/src/cognition_engine/executor/: __init__.py  base.py
cognition_engine/src/cognition_engine/perceptor/: __init__.py  base.py  conversation_remembering_perceptor.py
cognition_engine/src/cognition_engine/persona/: __init__.py  base.py
cognition_engine/src/cognition_engine/proposer/: __init__.py  base.py  message_response_proposer.py
cognition_engine/src/cognition_engine/scheduler/: __init__.py  base.py
cognition_engine/src/cognition_engine/types/: __init__.py  base.py
cognition_engine/tests/: test_conversation_remembering_perceptor.py  test_executor.py  test_perceptor.py  test_persona.py  test_proposer.py  test_scheduler.py  test_types.py
kairix-core/: Makefile  package.json  pyproject.toml
kairix-core/src/kairix_core/: __init__.py  inference_provider.py  thread_runner.py
kairix-core/src/kairix_core/inference/: openai.py  vllm.py
kairix-core/src/kairix_core/prompt/: __init__.py  prompt_messages.py  system_instructions.py  system_prompt.py
kairix-core/src/kairix_core/tools/: vllm_cli.py
kairix-core/src/kairix_core/types/: __init__.py  test
kairix-core/src/kairix_core/util/: environment.py  logging.py
kairix-core/tests/unit/kairix_core/: test_openai_inference_provider.py  test_vllm_inference_provider.py
kairix-engine/: .gitignore  Justfile  eleven.py  gradio_chat.py  main.py  pyproject.toml  voice.py
kairix-engine/docs/: performance-testing-proposal.md
kairix-engine/src/kairix_engine/: agent_registry.py  basic_chat.py  message_history.py  summary_store.py
kairix-engine/src/kairix_engine/chat/: simple_chat.py
kairix-engine/src/kairix_engine/voice/static/: util.py
kairix-engine/src/kairix_engine/voice/streamed/: my_workflow.py
kairix-engine/testplan/: dataset_generation_strategy.md  kairix_test_infrastructure_proposal.md
kairix-engine/tests/: conftest.py  test_message_history.py
kairix-engine/tests/integration/: test_agents_parallelism.py  test_elevenlabs_real.py  test_openai_parallelism.py  test_openai_real_parallelism.py
kairix-engine/tests/unit/: test_chat_history_integration.py  test_chat_method.py  test_chat_run_method.py  test_gradio_voice.py  test_summary_store.py
kairix-llama-index/: Justfile  main.py  pyproject.toml
kairix-llama-index/src/: __init__.py
kairix-llama-index/src/kairix_llama_index/: demo.py
kairix-offline/: .env.mac  1  Justfile  Makefile  conftest.py  default.env  docker-compose.yml  output.logs  package-lock.json  package.json  pyproject.toml  run_tests.py  verify_integration_setup.py
kairix-offline/.opencode/: opencode.db-shm  opencode.db-wal
kairix-offline/env/: default.env  mac.env
kairix-offline/scripts/: README_cron.md  clear-entities.cypher  conversation_ingestion_cron.py  create_sample_conversations.py  run_agent_synth.py  test_integration.py  test_unit.py
kairix-offline/src/kairix/: __init__.py  inference_eval.py  types.py
kairix-offline/src/kairix/ui/: gpt_loader.py  memory_pipeline.py  summary_memory_synth.py
kairix-offline/src/kairix_offline/eval/: inference_eval.py
kairix-offline/src/kairix_offline/processing/: __init__.py  gpt_loader.py  summary_memory_synth.py
kairix-offline/src/kairix_offline/scripts/: run_agent_synth.py
kairix-offline/src/kairix_offline/stores/sqlite/: __init__.py  conversation_store.py  models.py
kairix-offline/src/kairix_offline/ui/: __init__.py  import argparse.py  llm_compare.py  mem_ui.py  memory_pipeline.py
kairix-offline/src/kairix_offline/workflow/: chatgpt_import.py
kairix-offline/test_data/: test-convos.json
kairix-offline/tests/: conftest.py
kairix-offline/tests/integration/: README.md  conftest.py  pytest_plugins.py  test_conversation_ingestion.py  test_conversation_ingestion_simple.py  test_gpt_loader_integration.py  test_load_sources_from_gpt.py  test_summary_memory_synth_integration.py  test_summary_synth.py
kairix-offline/tests/ui/: conftest.py  test_memory_pipeline.py
kairix-offline/tests/unit/: README.md  __init__.py  pytest_examples.py  test_summary_memory_synth.py
kairix-server/: Makefile  pyproject.toml
kairix-server/src/kairix_server/: __init__.py
kairix-ui-testing/: .env.example  .gitignore  Makefile  README.md  README_INTEGRATION.md  pyproject.toml  run_single_test.py  run_tests.sh  verify_setup.py
kairix-ui-testing/.opencode/: opencode.db-shm  opencode.db-wal
kairix-ui-testing/docs/: test_cases.md
kairix-ui-testing/src/kairix_ui_testing/: __init__.py  fixtures.py  mock_patches.py  pytest_plugin.py  test_scenarios.py
kairix-ui-testing/src/kairix_ui_testing/config/: __init__.py  settings.py
kairix-ui-testing/src/kairix_ui_testing/core/: __init__.py  base_test.py  page_objects.py  patched_server.py  test_server.py  ui_test_base.py
kairix-ui-testing/src/kairix_ui_testing/interfaces/: __init__.py
kairix-ui-testing/src/kairix_ui_testing/interfaces/memory_pipeline/: __init__.py
kairix-ui-testing/src/kairix_ui_testing/mocked_apps/: __init__.py  mock_behaviors.py
kairix-ui-testing/src/kairix_ui_testing/test_cases/: __init__.py
kairix-ui-testing/src/kairix_ui_testing/test_cases/memory_pipeline/: __init__.py  test_cross_tab_ui.py  test_import_tab_ui.py  test_synthesis_tab_ui.py
kairix-ui-testing/src/kairix_ui_testing/test_runner/: __init__.py  patched_ui_runner.py
kairix-ui-testing/tests/: conftest.py
kairix-ui-testing/tests/memory_pipeline/: __init__.py  test_example_structure.py  test_import_tab_ui.py  test_synthesis_tab_ui.py
make/: README.md  (+2 more)
(+21 files in other folders)
