[project]
name = "cognition-engine"
version = "0.1.0"
description = "Kairix Psyche Engine - Agent-based cognition architecture"
requires-python = ">=3.10,<3.11"
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "rich>=14.0.0,<15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.8.7,<1.0.0",
    "ty>=0.0.1a8,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ty]
python-version = "3.10"
strict = true
