[project]
name = "cognition-engine"
version = "0.1.0"
description = "Kairix Cognition Engine - Agent-based cognition architecture"
requires-python = ">=3.10,<3.11"
dependencies = [
    "openai-agents>=0.0.17",
    "rich>=14.0.0",
]

[build-system]
requires = ["uv_build>=0.7.8"]
build-backend = "uv_build"


dependencies = [
    "openai>=1.0.0,<2.0.0",
    "rich>=14.0.0,<15.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.7,<1.0.0",
    "ty>=0.0.1a8,<1.0.0",
    "pytest>=8.4.0,<9.0.0",
]
[tool.uv]
package = true


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ty]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "ty>=0.0.1a9",
]
