[project]
name = "kairix-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mark Lubin", email = "melubin@pm.me" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
kairix-core = "kairix_core:main"

[build-system]
requires = ["uv_build>=0.7.11,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "kairix_core"

[tool.uv]
package = true