[build-system]
requires = ["uv_build>=0.7.8"]
build-backend = "uv_build"

[project]
name = "kairix-core"
version = "0.1.0"
description = "Core functionality for Kairix"
readme = "README.md"
authors = [
    { name = "Mark Lubin", email = "melubin@pm.me" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "neomodel>=5.5.0",
    "chatformat>=1.2",
]

[tool.uv]
package = true
