[project]
name = "kairix-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cognition-engine",
    "gradio>=5.33.2",
    "kairix-core",
    "neomodel>=5.5.0",
    "nest-asyncio>=1.6.0",
    "openai>=1.86.0",
    "openai-agents>=0.0.17",
    "openai-swarm>=0.1.1",
    "sentence-transformers>=4.1.0",
    "sounddevice>=0.5.2",
    "textual>=3.3.0",
    "ty>=0.0.1a9",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.1a9",
    "ruff>=0.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ipython>=8.0.0",
    "typeguard>=4.1.5",
    "ruff-lsp>=0.0.53",
    "python-lsp-server>=1.11.0",
    "pyright>=1.1.350",
    "mypy>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.7.8"]
build-backend = "uv_build"

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 88
fix = true
src = ["src"]

[tool.uv]
package = true
override-dependencies = [
    "openai>=1.33.0",  # Force newer openai
    "instructor>=1.0.0",  # Force newer instructor that works with newer openai
    "rich>=14.0.0"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific
    "ASYNC",# flake8-async - Check for common async/await mistakes
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# Pytest configuration
[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "-v",
]
testpaths = ["tests"]
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

# Typeguard configuration
[tool.typeguard]
# Automatically check all functions in your package
packages = ["kairix_engine"]
# Forward references work automatically
forward_ref_policy = "RESOLVE"
# Check collection types deeply
collection_check_strategy = "ALL_ITEMS"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest-asyncio>=1.0.0",
    "textual-dev>=1.7.0",
]

[tool.uv.sources]
kairix-core = { path = "../kairix-core" }
cognition-engine = { path = "../cognition_engine", editable = true }

# Mypy configuration for better type checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Temporarily disabled to focus on async issues
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # Temporarily disabled
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false  # Temporarily disabled
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Enable strict async checking
enable_error_code = ["unused-awaitable", "redundant-expr", "truthy-bool"]
# Ignore missing imports for external packages
ignore_missing_imports = true
