[build-system]
requires = ["uv_build>=0.7.8"]
build-backend = "uv_build"

[project]
name = "kairix-offline"
version = "0.1.0"
description = "Offline functionality for Kairix"
readme = "README.md"
authors = [
    { name = "Mark Lubin", email = "melubin@pm.me" }
]
requires-python = ">=3.11"
dependencies = [
    "kairix-core",
    "gradio>=5.33.0",
    "neo4j>=5.28.1",
    "neomodel>=5.5.0",
    "numpy>=2.2.6",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "semchunk>=3.2.1",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "accelerate>=1.7.0",
    "testcontainers>=4.10.0",
    "chatformat>=1.2",
    "bitsandbytes>=0.46.0",
    "protobuf>=6.31.1",
    "sentencepiece>=0.2.0",
]


[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[tool.uv]
package = true

[tool.uv.sources]
kairix-core = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "skip: skip test",
    "xfail: mark test as expected to fail",
]
