[build-system]
requires = ["uv_build>=0.7.8"]
build-backend = "uv_build"

[project]
name = "kairix-server"
version = "0.1.0"
description = "Server component for Kairix"
readme = "README.md"
authors = [
    { name = "Mark Lubin", email = "melubin@pm.me" }
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "kairix-core",
    "fastapi",
    "uvicorn"
]

[project.scripts]
kairix-server = "kairix_server:main"


[tool.uv]
package = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.uv.sources]
kairix-core = { workspace = true }
